; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/hfs/extr_super.c_hfs_put_super.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/hfs/extr_super.c_hfs_put_super.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.super_block*)* @hfs_put_super to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hfs_put_super(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %3 = call i32 (...) @lock_kernel()
  %4 = load %struct.super_block*, %struct.super_block** %2, align 8
  %5 = getelementptr inbounds %struct.super_block, %struct.super_block* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.super_block*, %struct.super_block** %2, align 8
  %10 = call i32 @hfs_write_super(%struct.super_block* %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load %struct.super_block*, %struct.super_block** %2, align 8
  %13 = call i32 @hfs_mdb_close(%struct.super_block* %12)
  %14 = load %struct.super_block*, %struct.super_block** %2, align 8
  %15 = call i32 @hfs_mdb_put(%struct.super_block* %14)
  %16 = call i32 (...) @unlock_kernel()
  ret void
}

declare dso_local i32 @lock_kernel(...) #1

declare dso_local i32 @hfs_write_super(%struct.super_block*) #1

declare dso_local i32 @hfs_mdb_close(%struct.super_block*) #1

declare dso_local i32 @hfs_mdb_put(%struct.super_block*) #1

declare dso_local i32 @unlock_kernel(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
